# CPP2

./: .gitignore  .gitmodules
LG-Cafe-1/: CMakeLists.txt  Cafe.cpp  Cafe.h
LG-Cafe-2/: CMakeLists.txt  Cafe.h  ChangeMaker.h
LG-Cafe-2/src/: Cafe.cpp  Cafe.h  ChangeMaker.cpp  ChangeMaker.h  main.cpp
LG-Cafe-2/test/: tests.cpp
LG-Euchre/: CMakeLists.txt
LG-Euchre/src/: Card.cpp  Card.h  Deck.cpp  Deck.h  EuchreDealer.cpp  EuchreDealer.h  main.cpp
in-class/C++2_class1/: C++2_class1.sln
in-class/C++2_class1/C++2_class1/: C++2_class1.cpp  C++2_class1.h  C++2_class1.vcxproj  C++2_class1.vcxproj.filters
in-class/C++2_class1/C++2_class1/Debug/: C++2_class1.pch  vc141.idb
in-class/C++2_class1/C++2_class1/Debug/C++2_class1.tlog/: C++2_class1.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
in-class/C++2_class1/Debug/: C++2_class1.ilk
in-class/C++2_class2/FibonacciEven/: FibonacciEven.sln
in-class/C++2_class2/FibonacciEven/Debug/: FibonacciEven.ilk
in-class/C++2_class2/FibonacciEven/FibonacciEven/: FibEven.cpp  FibEven.h  FibEvenTest.cpp  FibonacciEven.cpp  FibonacciEven.vcxproj  FibonacciEven.vcxproj.filters
in-class/C++2_class2/FibonacciEven/FibonacciEven/Debug/: FibonacciEven.pch  vc141.idb
in-class/C++2_class2/FibonacciEven/FibonacciEven/Debug/FibonacciEven.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  FibonacciEven.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
in-class/C++2_class3/PrimeFinder/: PrimeFinder.cpp
in-class/C++2_class3/School data structure/: School.cpp  School.hpp
in-class/C++2_class3/cans/: can.cpp  can.hpp
in-class/C++2_class3/dependence/: dependence.hpp
in-class/C++2_class4/IndexAdd/: CMakeLists.txt  IndexAdd.cpp
in-class/C++2_class4/RectFriendship/: Rectangle.cpp  Rectangle.hpp  Square.cpp  Square.hpp
in-class/C++2_class5/ArrayInsert/: ArrayInsert.cpp  CMakeLists.txt  gtest.cmake  logic.cpp
in-class/C++2_class5/ArrayInsert/src/: logic.cpp  logic.h
in-class/C++2_class5/ArrayInsert/test/: tests.cpp
in-class/C++2_class6/sqrtpow/: CMakeLists.txt  main.cpp  sqrtpow.cpp  sqrtpow.hpp
in-class/C++2_class6/sqrtpow/test/: tests.cpp
in-class/C++2_class7/PointerTypes/: PointerTypesEx.cpp
in-class/C++2_class7/SmallerNums/: CMakeLists.txt
in-class/C++2_class7/SmallerNums/src/: SmallerNums.cpp
in-class/C++2_class8/: CMakeLists.txt  graph.cpp
in-class/C++2_class8/src/: graph.cpp
in-class/C++2_class9/: facade.cpp
in-class/C++2_class9/unit-test-inclass/: CMakeLists.txt
in-class/C++2_class9/unit-test-inclass/src/: main.cpp  mock_user.cpp  mock_user.hpp
in-class/C++2_class9/unit-test-inclass/test/: test.cpp
